example/lib/src/generated/errors/errors_localization_uk.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Ukrainian (`uk`).
class ErrorsLocalizationUk extends ErrorsLocalization {
  ErrorsLocalizationUk([String locale = 'uk']) : super(locale);

  @override
  String get error => 'Сталася помилка';

  @override
  String get unexpectedError => 'Сталася несподівана помилка';

  @override
  String get bugReportSentText => 'Баг-репорт надіслано успішно.';
}
